// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Search /> should render 1`] = `
<div>
  <label
    class="sc-bDumWk fndpLs"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <div
    class="sc-kYxDKI dNAUSa sc-dxcDKg buNCqk"
  >
    <input
      class="sc-bpUBKd ktFmXQ"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value=""
    />
  </div>
  <p
    class="sc-gvZAcH LUnKh"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-kRRyDe ibjCXy"
    >
      Consultez
       
      <button
        class="sc-kOPcWz cOwJar sc-knuQbY hdXeye"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> should show no results when no result 1`] = `
<div>
  <label
    class="sc-bDumWk fndpLs"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <div
    class="sc-kYxDKI dNAUSa sc-dxcDKg buNCqk"
  >
    <input
      class="sc-bpUBKd ktFmXQ"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="9999"
    />
  </div>
  <div
    class="sc-ERObt dgXOhg"
  >
    <p
      class="sc-fvtFIe dBIUza"
    >
      Aucun résultat n’a été trouvé.
    </p>
  </div>
  <p
    class="sc-gvZAcH LUnKh"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-kRRyDe ibjCXy"
    >
      Consultez
       
      <button
        class="sc-kOPcWz cOwJar sc-knuQbY hdXeye"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> should show spinner when loading 1`] = `
<div>
  <label
    class="sc-bDumWk fndpLs"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <div
    class="sc-kYxDKI dNAUSa sc-dxcDKg buNCqk"
  >
    <input
      class="sc-bpUBKd ktFmXQ"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="8888"
    />
  </div>
  <div
    class="sc-ERObt dgXOhg"
  >
    <p
      class="sc-fvtFIe dBIUza"
    >
      <svg
        aria-labelledby="title desc"
        class="__react-svg-spinner_circle"
        height="1em"
        role="img"
        style="animation-duration: 750ms;"
        viewBox="0 0 32 32"
        width="1em"
      >
        <title
          id="title"
        >
          Circle loading spinner
        </title>
        <desc
          id="desc"
        >
          Image of a partial circle indicating "loading."
        </desc>
        <style>
          
      .__react-svg-spinner_circle{
          transition-property: transform;
          animation-name: __react-svg-spinner_infinite-spin;
          animation-iteration-count: infinite;
          animation-timing-function: linear;
      }
      @keyframes __react-svg-spinner_infinite-spin {
          from {transform: rotate(0deg)}
          to {transform: rotate(360deg)}
      }
    
        </style>
        <circle
          cx="16"
          cy="16"
          fill="none"
          r="12"
          role="presentation"
          stroke="rgba(0,0,0,0.4)"
          stroke-dasharray="43.982297150257104"
          stroke-linecap="round"
          stroke-width="4"
        />
      </svg>
       Recherche des convention collectives...
    </p>
  </div>
  <p
    class="sc-gvZAcH LUnKh"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-kRRyDe ibjCXy"
    >
      Consultez
       
      <button
        class="sc-kOPcWz cOwJar sc-knuQbY hdXeye"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> when input is IDCC, should search conventions 1`] = `
<div>
  <label
    class="sc-bDumWk fndpLs"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <div
    class="sc-kYxDKI dNAUSa sc-dxcDKg buNCqk"
  >
    <input
      class="sc-bpUBKd ktFmXQ"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="1234"
    />
  </div>
  <div
    class="sc-ERObt dgXOhg"
  >
    <div
      class="sc-iGgWBj sc-iapWAC cRLRjd koPLNl"
    >
      <h3
        class="sc-kAyceB dvmaTz"
        data-testid="heading"
      >
        CONVENTIONS COLLECTIVES (2
         
        résultats)
      </h3>
      <ul
        class="sc-cfxfcM kMmTaI"
      >
        <li
          class="sc-kqGoIF kqjtyM"
        >
          <a
            class="sc-dSIIpw iNHuaL"
            href="/convention-collective/275-small-titre"
          >
            small titre
             
            <span
              class="sc-fMMURN chikxH"
            >
              (IDCC 
              0275
              )
            </span>
          </a>
        </li>
        <li
          class="sc-kqGoIF kqjtyM"
        >
          <a
            class="sc-dSIIpw gbtCzV"
            href="/convention-collective/276-smaller-convention-2"
          >
            smaller convention 2
             
            <span
              class="sc-fMMURN chikxH"
            >
              (IDCC 
              0276
              )
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <p
    class="sc-gvZAcH LUnKh"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-kRRyDe ibjCXy"
    >
      Consultez
       
      <button
        class="sc-kOPcWz cOwJar sc-knuQbY hdXeye"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> when input is a valid IDCC, should show only the perfect match 1`] = `
<div>
  <label
    class="sc-bDumWk fndpLs"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <div
    class="sc-kYxDKI dNAUSa sc-dxcDKg buNCqk"
  >
    <input
      class="sc-bpUBKd ktFmXQ"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="4567"
    />
  </div>
  <div
    class="sc-ERObt dgXOhg"
  >
    <div
      class="sc-iGgWBj sc-iapWAC cRLRjd koPLNl"
    >
      <h3
        class="sc-kAyceB dvmaTz"
        data-testid="heading"
      >
        CONVENTIONS COLLECTIVES (1
         
        résultat)
      </h3>
      <ul
        class="sc-cfxfcM kMmTaI"
      >
        <li
          class="sc-kqGoIF kqjtyM"
        >
          <a
            class="sc-dSIIpw iNHuaL"
            href="/convention-collective/4567-smaller-convention-2"
          >
            smaller convention 2
             
            <span
              class="sc-fMMURN chikxH"
            >
              (IDCC 
              4567
              )
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <p
    class="sc-gvZAcH LUnKh"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-kRRyDe ibjCXy"
    >
      Consultez
       
      <button
        class="sc-kOPcWz cOwJar sc-knuQbY hdXeye"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> when searching by text, should use enterprise API 1`] = `
<div>
  <label
    class="sc-bDumWk fndpLs"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <div
    class="sc-kYxDKI dNAUSa sc-dxcDKg buNCqk"
  >
    <input
      class="sc-bpUBKd ktFmXQ"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="hello"
    />
  </div>
  <div
    class="sc-ERObt dgXOhg"
  >
    <p
      class="sc-fvtFIe dBIUza"
    >
      Le service de recherche est indisponible.
    </p>
  </div>
  <p
    class="sc-gvZAcH LUnKh"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-kRRyDe ibjCXy"
    >
      Consultez
       
      <button
        class="sc-kOPcWz cOwJar sc-knuQbY hdXeye"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;
